# yolov5-OpenVINO

./: CMakeLists.txt  README.md  demo.cc  yolov5.cc  yolov5.h
yolov5s_openvino_model_384_640/: yolov5s.mapping  yolov5s.xml
